--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="app_pause">暂停</string>
     <string name="app_reset">重置</string>
     <string name="app_register">注册</string>
+    <string name="app_main_page">首页</string>
+    <string name="app_main_dynamic">动态</string>
     <string name="app_settings">设置</string>
     <string name="app_about_us">关于我们</string>
     <string name="app_destroy">注销</string>
@@ -17,6 +19,5 @@
     <string name="app_destroy_url">http://www.wkjandroid.wang/customer/login/quitLogin</string>
     <string name="app_video_upload_url_edit">rtmp://47.93.20.45:1935/live/livestreams</string>
     <string name="app_edit_comment_text">请输入信息</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
