--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="app_longrequest_url"> http://www.wkjandroid.wang/</string>
     <string name="app_destroy_url">http://www.wkjandroid.wang/customer/login/quitLogin</string>
     <string name="app_video_upload_url_edit">rtmp://47.93.20.45:1935/live/livestreams</string>
+    <string name="app_message_websocket_url_edit">ws://172.18.138.20:80/websocket</string>
     <string name="app_edit_comment_text">请输入信息</string>
+
 
 </resources>
