--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,14 @@
     <string name="app_exit">退出</string>
     <string name="app_dark_mode">夜间模式</string>
     <string name="app_day_mode">白天模式</string>
-    <string name="app_login_url">http://172.18.163.108/customer/login/toLogin</string>
-    <string name="app_longrequest_url">http://172.18.163.108/</string>
-    <string name="app_get_user_info_url">http://172.18.163.108/customer/login/getUserInfo</string>
-    <string name="app_destroy_url">http://172.18.163.108/customer/login/quitLogin</string>
+    <string name="app_login_url">http://192.168.191.1/customer/login/toLogin</string>
+    <string name="app_longrequest_url">http://192.168.191.1/</string>
+    <string name="app_customer_live_getHomeLiveUserInfos_url">http://192.168.191.1/customer/live/getHomeLiveUserInfos</string>
+
+    <string name="app_get_user_info_url">http://192.168.191.1/customer/login/getUserInfo</string>
+    <string name="app_destroy_url">http://192.168.191.1/customer/login/quitLogin</string>
     <string name="app_video_upload_srs_server_url">rtmp://47.93.20.45:1935/live/livestreams</string>
-    <string name="app_message_websocket_url_edit">ws://172.18.163.108/websocket/</string>
+    <string name="app_message_websocket_url_edit">ws://192.168.191.1/websocket/</string>
     <string name="app_edit_comment_text">请输入信息</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
