--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">FitnessLive</string>
     <string name="app_login">登录</string>
+    <string name="app_nextstep">下一步</string>
     <string name="app_start">开始</string>
     <string name="app_stop">停止</string>
     <string name="app_pause">暂停</string>
@@ -11,17 +12,19 @@
     <string name="app_settings">设置</string>
     <string name="app_about_us">关于我们</string>
     <string name="app_destroy">注销</string>
+    <string name="app_get_verify_code">获取验证码</string>
     <string name="app_exit">退出</string>
-    <string name="app_dark_mode">夜间模式</string>
-    <string name="app_day_mode">白天模式</string>
     <string name="app_login_url">http://192.168.191.1/customer/login/toLogin</string>
     <string name="app_longrequest_url">http://192.168.191.1/</string>
     <string name="app_customer_live_getHomeLiveUserInfos_url">http://192.168.191.1/customer/live/getHomeLiveUserInfos</string>
-
+    <string name="app_customer_live_getHomeLivetags_url">http://192.168.191.1/customer/live/getHomeUserLiveThemes</string>
     <string name="app_get_user_info_url">http://192.168.191.1/customer/login/getUserInfo</string>
     <string name="app_destroy_url">http://192.168.191.1/customer/login/quitLogin</string>
     <string name="app_video_upload_srs_server_url">rtmp://47.93.20.45:1935/live/livestreams</string>
     <string name="app_message_websocket_url_edit">ws://192.168.191.1/websocket/</string>
     <string name="app_edit_comment_text">请输入信息</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
