--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,10 +16,10 @@
     <string name="app_get_verify_code">获取验证码</string>
     <string name="app_exit">退出</string>
     <string name="app_edit_comment_text">请输入信息</string>
-    <string name="app_video_upload_srs_server_url">rtmp://119.29.154.229:1935/live/livestreams</string>
+    <string name="app_video_upload_srs_server_url">rtmp://119.29.154.229:1935/live</string>
 
-    <string name="app_message_websocket_url_edit">ws://192.168.191.1/websocket/</string>
-
+    <string name="app_message_websocket_customer_live_url">ws://192.168.191.1/websocket/</string>
+    <string name="app_message_websocket_customer_watch_live_url">ws://192.168.191.1/websocket/</string>
     <string name="app_longrequest_url">192.168.191.1</string>
     <string name="app_customer_register_user_url">http://192.168.191.1/customer/login/registerUser</string>
     <string name="app_customer_user_update_password_url">http://192.168.191.1/customer/login/updateUserPassword</string>
